dhall/tests/type-errors/unit/IfBranchesNotType.txt
Type error: error: IfBranchMustBeTerm
 --> <current file>:1:0
  |
1 | if True then Type else Type
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ IfBranchMustBeTerm
  |
